Datos/Envios/241/compilacion.txt
../Datos/Envios/241/ARI.java:3: error: class A is public, should be declared in a file named A.java
public class A {
       ^
1 error
